# radix-rust

./: Cargo.toml  README.md
datasets/: DEV-tempoExecucao-Rust-14-07-2024-11-09-29.csv  RADIX1-tempoExecucao-Rust-14-07-2024-11-34-28.csv  RADIX2-tempoExecucao-Rust-14-07-2024-11-58-08.csv  RELEASE-tempoExecucao-Rust-14-07-2024-10-47-42.csv  tempoExecucao-Rust-23-06-2024-14-45-44.csv  tempoExecucao-Rust-24-06-2024-10:53:17.csv
datasets/aleatorios/: 100000Aleatorio-CEP.txt  100000Aleatorio-Extremo.txt  100000Aleatorio-Iguais.txt  100000Aleatorio-RangeMaior.txt  100000Aleatorio-RangeMenor.txt  100000Aleatorio.txt  10000Aleatorio-CEP.txt  10000Aleatorio-Extremo.txt  10000Aleatorio-Iguais.txt  10000Aleatorio-RangeMaior.txt  10000Aleatorio-RangeMenor.txt  10000Aleatorio.txt  10000Aleatorio.txt22-06-2024-12:12:21.csv  500000Aleatorio-Iguais.txt  500000Aleatorio-RangeMaior.txt  500000Aleatorio-RangeMenor.txt  500000Aleatorio.txt
datasets/crescentes/: 100000Crescente-CEP.txt  100000Crescente-Extremo.txt  100000Crescente-Iguais.txt  100000Crescente-RangeMaior.txt  100000Crescente-RangeMenor.txt  100000Crescente.txt  10000Crescente-CEP.txt  10000Crescente-Extremo.txt  10000Crescente-Iguais.txt  10000Crescente-RangeMaior.txt  10000Crescente-RangeMenor.txt  10000Crescente.txt  500000Crescente-Iguais.txt  500000Crescente-RangeMaior.txt  500000Crescente-RangeMenor.txt  500000Crescente.txt
datasets/decrescentes/: 100000Decrescente-CEP.txt  100000Decrescente-Extremo.txt  100000Decrescente-Iguais.txt  100000Decrescente-RangeMaior.txt  (+11 more)
src/: arquivos.rs  main.rs  radixSort.rs
